--- a/AribnbTpe.Rmd
+++ b/AribnbTpe.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "多變量分析期末報告(airbib)完整程式碼"
-author: "陳琬珊"
+title: "多變量分析期末報告(airbib)EDA和非監督式學習模型程式碼"
+author: "Elinor Chen"
 date: "2020/8/22"
 output: 
   html_document:
